cmake_minimum_required(VERSION 3.16)
project(cpp)

set(CMAKE_CXX_STANDARD 14)

# include_directories(./acw)

# 查找指定目录下的所有源文件
# file(GLOB SRC_FILES acw/*.cpp)

# 将所有源文件添加到可执行文件中
add_executable(Q241 acw/Q241.cpp)
add_executable(Q1250 acw/Q1250.cpp)
add_executable(Q1252 acw/Q1252.cpp)
add_executable(Q238 acw/Q238.cpp)
add_executable(Q242 acw/Q242.cpp)
add_executable(Q244 acw/Q244.cpp)
add_executable(Q1275 acw/Q1275.cpp)
add_executable(Q245 acw/Q245.cpp)
add_executable(Q243 acw/Q243.cpp)
add_executable(Q1277 acw/Q1277.cpp)
add_executable(Q1015 acw/Q1015.cpp)
add_executable(Q1027 acw/Q1027.cpp)
add_executable(Q1018 acw/Q1018.cpp)
add_executable(Q482 acw/Q482.cpp)
add_executable(Q1012 acw/Q1012.cpp)
add_executable(Q1016 acw/Q1016.cpp)
add_executable(Q423 acw/Q423.cpp)
add_executable(Q1022 acw/Q1022.cpp)
add_executable(Q532 acw/Q532.cpp)
add_executable(Q7 acw/Q7.cpp)
add_executable(Q1013 acw/Q1013.cpp)
add_executable(Q426 acw/Q426.cpp)
add_executable(Q11 acw/Q11.cpp)
add_executable(Q10 acw/Q10.cpp)
add_executable(Q1057 acw/Q1057.cpp)
